--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 body{
     padding:0;
     margin:0;
+    width:100%;
+    height:100%;
+
 }
 
 .container{
@@ -40,21 +43,152 @@ body{
 }
 
 .showcase-header{
+
    
     background-image: linear-gradient(rgba(255,255,255,.3),rgba(255,255,255,.3)),url("../images/showcase-photo.jpg");
     background-size: cover;
     background-position: center;
-    flex-basis: 500px;
+    flex-basis: 1000px;
     display:flex;
     align-items: center;
     justify-content: center;
 }
 .showcase-header h1{
     color: black;
+}
+.image-logo{
     
-   
+    width:200px;
+    height:200px;
+    border: 5px solid black;
+    border-radius: 20%;
+    background-image: url('../images/logo.png');
+    background-position: center;
+    background-size:100%;
+    background-color: #0d98ba;
+    background-repeat: no-repeat;
+
+}
+
+
+
+.introduction-class{
+    padding-left:20px;
+    background:grey;
+    
     
 }
+
+.introduction-class h2{
+    font-size: 2.1em;
+    padding: 20px 0 10px 20px;
+    margin:0;
+}
+
+
+.introduction-article{
+    display:flex;
+    justify-items: center;
+    align-items: center;
+    
+}
+
+.image-logo{
+    display:flex;
+    flex-basis:500px;
+    
+    margin-right:20px;
+}
+
+.introduction-article p{
+    font-size: 1.8em;
+}
+
+.main-footer *{
+    padding:0;
+    margin:0;
+}
+
+.footer-nav-container{
+    display:flex;
+    flex-flow: row;
+    flex-basis:100%;
+    justify-content: space-evenly;
+}
+
+
+
+.main-footer{
+    
+    background: #333157;
+}
+
+
+
+.main-footer a{
+    
+    text-decoration: none;
+    color:white;
+    font-size: 1.5em;
+    
+}
+
+.main-footer p{
+   
+    color: white;
+    justify-content: center;
+    font-size: 1.2em;
+    display: flex;
+    padding-bottom:10px;
+    padding-right: 250px;
+    padding-top:10px;
+}
+
+.main-footer ul{
+    list-style-type: none;
+    
+}
+
+.main-footer li{
+    padding:20px;
+}
+
+@media(max-width: 600px){
+
+    .showcase-header h1{
+        justify-content: center;
+        text-align: center;
+        flex-basis: 100%;
+    }
+
+    .introduction-article{
+        justify-content: center;
+        text-align: center;
+        flex-wrap: wrap;
+        padding:0;
+    }
+
+    .introduction-class h2{
+        justify-content: center;
+        text-align: center;
+        padding-left:0;
+    }
+    .image-logo{
+        flex-basis: 40%;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .main-footer p{
+        justify-content: center;
+        text-align: center;
+        flex-basis: 100%;
+        padding-right:0;
+    }
+
+}
+
+
 
 
 
