--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     padding:0;
     margin:0;
     width:100%;
-    height:100%;
+    
 
 }
 
@@ -153,7 +153,7 @@ body{
     padding:20px;
 }
 
-@media(max-width: 600px){
+@media(max-width: 640px){
 
     .showcase-header h1{
         justify-content: center;
@@ -186,6 +186,13 @@ body{
         padding-right:0;
     }
 
+}
+
+@media (min-width: 445px){
+    .container li{
+        flex-basis:100%;
+        width:100%;
+    }
 }
 
 
