--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,16 @@ body{
     padding:0;
     margin:0;
     width:100%;
-    
+    height: 100%;
+    overflow-x: hidden;
+    min-width: 100%;
 
 }
 
 .container{
     display:flex;
     flex-direction: column;
-    flex-basis:100%;
+    
 }
 
 
@@ -24,15 +26,18 @@ body{
 
 
 
+
+
 .main-nav ul{
     display: flex;
     justify-content: center;
+    
     margin:0;
 }
 
 .main-nav li{
     list-style-type: none;
-    margin: 25px;
+    margin:25px;
     font-size: 2em;
     
 }
@@ -90,7 +95,7 @@ body{
     display:flex;
     justify-items: center;
     align-items: center;
-    
+    padding:10px;
 }
 
 .image-logo{
@@ -153,7 +158,9 @@ body{
     padding:20px;
 }
 
-@media(max-width: 640px){
+@media(max-width: 600px){
+
+   
 
     .showcase-header h1{
         justify-content: center;
@@ -174,9 +181,10 @@ body{
         padding-left:0;
     }
     .image-logo{
-        flex-basis: 40%;
+        flex-basis: 30%;
         background-repeat: no-repeat;
         background-size: cover;
+        
     }
 
     .main-footer p{
@@ -188,12 +196,6 @@ body{
 
 }
 
-@media (min-width: 445px){
-    .container li{
-        flex-basis:100%;
-        width:100%;
-    }
-}
 
 
 
