--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
 *{
     box-sizing: border-box;
+    padding:0;
+    margin:0;
+    
 }
 
 body{
+    background: grey;
+    
     
     margin:0;
     padding:0;
-    
+    width:100%;
+    height:100%;
+    min-height: 100%;
 }
 
 .container{
@@ -113,10 +120,7 @@ body{
     font-size: 1.8em;
 }
 
-.main-footer *{
-    padding:0;
-    margin:0;
-}
+
 
 .footer-nav-container{
     display:flex;
@@ -130,6 +134,7 @@ body{
 .main-footer{
     
     background: #333157;
+    
 }
 
 
@@ -151,6 +156,7 @@ body{
     padding-bottom:10px;
     padding-right: 250px;
     padding-top:10px;
+    
 }
 
 .main-footer ul{
