--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,10 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
-
 }
+
+body{
+    background-color:rgb(10, 10, 10);
+    color:white;
+}
+
