--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,44 @@ li{
     margin-right:100px;
 }
 
+/* Showcase page */
+
+.main-showcase{
+    background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.5)), url('../images/showcase-photo.jpg');
+    
+    background-repeat: no-repeat;
+    background-position:  50% 100%;
+    background-size: 100%;
+    height:500px;
+    
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.showcase-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.showcase-container h1{
+    margin:20px;
+    font-size:2.5em;
+}
+
+.showcase-container h4{
+    margin:10px;
+    font-size:1.9em;
+}
+
+.showcase-container button{
+    margin:50px;
+    width:200px;
+    height:47px;
+    
+}
+
+
