--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,21 @@ section{
 .contact-form{
     display:flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.contact-form input{
+    width:500px;
+    height:50px;
+    margin-top:10px;
+    font-size:1.5em;
+}
+
+.contact-form textarea{
+    width:500px;
+    height:200px;
+    margin-top:10px;
+    font-size:1.9em;
 }
 
 
