--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     padding:0;
     margin:0;
@@ -8,9 +10,10 @@
 body{
     background-color:rgb(10, 10, 10);
     color:white;
-    margin-right:20px;
-    margin-left:20px;
+    
 }
+
+
 
 img{
     width:500px;
@@ -26,11 +29,19 @@ li{
     list-style-type: none;
 }
 
+.general-container{
+    margin-right:20px;
+    margin-left:20px;
+}
+
 .main-header{
     display:flex;
     padding:20px;
 }
 
+.main-header .initial{
+    color:gray;
+}
 
 
 
@@ -40,7 +51,17 @@ li{
     flex-direction: row;
     justify-content: flex-end;
     flex-basis:100%;
+    margin-left:100px;
+    
+}
 
+.main-nav li{
+    padding: 10px 0;
+    border-bottom: 1px solid transparent;
+}
+
+.main-nav li:hover{
+    border-bottom: 1px solid gray;
 }
 
 .main-nav ul{
@@ -59,10 +80,11 @@ li{
     background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.5)), url('../images/showcase-photo.jpg');
     
     background-repeat: no-repeat;
-    background-position:  50% 100%;
-    background-size: 100%;
-    height:700px;
+    background-position:  center center;
+    background-size: 100% 100%;
     
+    height:700px;
+    min-height:700px;    
 
     display:flex;
     align-items: center;
@@ -214,6 +236,10 @@ section{
     
 }
 
+.content-main-container > a{
+    border: 1px solid gray;
+}
+
 .content-container{
     width:300px;
     height:300px;
@@ -227,6 +253,9 @@ section{
     display:flex;
     justify-content: center;
 }
+
+
+
 
 
 
@@ -360,9 +389,13 @@ section{
 /* Footer section styling~ more coffee plox */
 
 .main-footer{
+    padding:20px;
+    
     display:flex;
     flex-direction: column;
     align-items: center;
+    background-color: gray;
+    width:100%;
 }
 
 
@@ -388,6 +421,7 @@ section{
 .nav-footer{
     display:flex;
     justify-content: center;
+    
 }
 
 
@@ -401,7 +435,6 @@ section{
 
 
 .nav-footer ul li {
-    
     margin-right:20px;
     margin-left:20px;
 }
